# de_etl_project

./: README.md  SDD.md
bash-mini-etl/: README.md
jupyter-playground/: 01-introduccion.ipynb  02-estructuras-de-datos.ipynb  03-estructuras-de-control.ipynb  04-funciones.ipynb  05-pandas-ejercicio.ipynb  05-pandas.ipynb  06-eda.ipynb  07-archivos.ipynb  08-numpy.ipynb  08-numpy_imagen.ipynb  09- api.ipynb  README.md  pyproject.toml  requirements.txt
jupyter-playground/01-data-preprocessing/: 02-estructuras-de-datos.ipynb  03-estructuras-de-control.ipynb  04-funciones.ipynb  07-archivos.ipynb  README.md
jupyter-playground/01-data-preprocessing/data/raw/: Ejemplo_nuevo.txt  Horas_Trabajadas.csv  Personas.csv
jupyter-playground/02-data-algorithms/: .gitignore  01-analisis-algoritmo.ipynb  02-actividad-edd-lineales.ipynb  02-edd-lineales.ipynb  03-arboles.ipynb  04-hashing.ipynb  05-actividad-grafos.ipynb  05-grafos.ipynb  README.md  pyproject.toml
jupyter-playground/data/raw/: Horas_Trabajadas.csv  Nuevas_Personas.csv  Personas.csv
output/: class_count.txt
pandas-analisis-ventas/: analisis-ventas.ipynb
pandas-sales-analysis/: .gitignore  README.md  pyproject.toml
pandas-sales-analysis/data/output/: resumen.csv
pandas-sales-analysis/data/raw/: Ventas.csv
postgres-basic-queries/: 03_auditoria_inventario.sql  README.md
scripts/: pipeline.sh
