[project]
name = "jupyter-playground"
version = "0.1.0"
description = "Entorno de práctica para Python, pandas, NumPy y notebooks de Jupyter."
requires-python = ">=3.12,<3.13"
dependencies = [
  "ipykernel==7.2.0",
  "pandas==2.2.3",
  "openpyxl==3.1.5",
  "matplotlib==3.10.8",
  "pillow==12.2.0",
  "requests==2.33.1",
  "httpx[http2]",
  "seaborn>=0.13.2",
]

[dependency-groups]
dev = [
  "jupyterlab>=4.4,<5",
  "pip-audit>=2.10.0",
  "ruff>=0.11,<0.12",
]

[tool.uv]
package = false

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
