[project]
name = "02-data-algorithms"
version = "0.1.0"
description = "Módulo de práctica de análisis algorítmico en notebooks de Jupyter."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "networkx>=3.6.1",
    "numpy>=2.4.4",
]
